# workspace_test

./: .gitignore  README.md
coin_partner/: .gitignore  README.md  config.example.toml  config.live-auto.toml  config.live-manage.toml  pyproject.toml
coin_partner/scripts/: live_auto_service.sh  live_manage_service.sh  manual_live_buy.sh
coin_partner/src/coin_partner/: bot.py  cli.py  config.py  desktop_prototype.py  indicators.py  models.py  prototype_data.py  risk.py  state.py  strategy.py  telegram.py  upbit.py
coin_partner/tests/: test_bot_notifications.py  test_cli.py  test_import_helpers.py  test_models.py  test_prototype_data.py  test_risk.py  test_strategy.py  test_telegram.py
stock_auto/: README.md  pyproject.toml
stock_auto/config/: strategy.example.json  strategy.spy.moderate.json
stock_auto/data/: sample_spy_minutes.csv  spy_kis_recent.csv
stock_auto/docs/: us-opening-fvg-bot-design.md
stock_auto/src/stock_auto/: __main__.py  cli.py  config.py  csv_utils.py
stock_auto/tests/: test_alpaca_historical.py  test_alpaca_paper.py  test_backtest_runner.py  test_bar_builder.py  test_kis_auth.py  test_kis_bot.py  test_kis_monitor.py  test_kis_overseas.py  test_kis_telegram.py  test_signal_engine.py  test_telegram.py
stock_report/: .gitignore  README.md  pyproject.toml
stock_report/config/: runtime.env.example  scoring.yaml  watchlist.example.yaml
stock_report/data/: README.md
stock_report/docs/: automation.md  mvp.md  pipeline.md  report_template.md  scoring.md
stock_report/reports/: README.md
stock_report/scripts/: install_launchd.sh  run_daily_refresh.sh  uninstall_launchd.sh
stock_report/tests/: __init__.py  test_backtest.py  test_calibration.py  test_cli.py  test_etf_data.py  test_fundamentals.py  test_http.py  test_live_profile.py  test_market_data.py  test_news.py  test_scoring.py  test_telegram.py  test_watchlist.py
trade_studio/: .gitignore  README.md  pyproject.toml
trade_studio/tests/: test_models.py  test_repository.py
(+67 files in other folders)
