[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coin-partner"
version = "0.1.0"
description = "Personal Upbit spot auto-trading bot with conservative risk controls."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
coin-partner-bot = "coin_partner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
