[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-auto"
version = "0.1.0"
description = "Backtesting toolkit for a US opening-range FVG strategy"
requires-python = ">=3.9"

[project.scripts]
stock-auto = "stock_auto.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
