[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-studio"
version = "0.1.0"
description = "Desktop crypto trading studio scaffold with exchange adapters and strategy profiles."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "PySide6>=6.7,<7"
]

[project.scripts]
trade-studio = "trade_studio.bootstrap:main"

[tool.setuptools.packages.find]
where = ["src"]
